# dns_c

./: .gitignore  AMCDns.h  CMakeLists.txt  DataStructure  exam2.c  example  example.c
src/: CMakeLists.txt  DNSPacket.c  DNSPacket.h  DataStructure.c  DataStructure.h  client.c  client.h  local.c  root  root.c  root.txt  server.c  server.h
